--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Mayan EDMS React application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "ts-node server.ts",
+    "dev": "nodemon server.ts"
   },
   "dependencies": {
     "axios": "^1.4.0",
