seeing a blank login page not loading in the browser 11:07 PM

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 MAYAN_USERNAME=admin
 MAYAN_PASSWORD=ladieh2025@
+SERVICE_AUXILIAIRE=service-auxiliaire
+SERVICE_AUXILIAIRE_PASSWORD=ladieh2025@
 # Add any other required environment variables below
 # Example:
 MAYAN_API_URL=http://localhost/api/v4
