tried to upload form data to postgres and minIO but failed retrying in 5min Jul 30 8:17 AM

--- a/backend/.env
+++ b/backend/.env
@@ -19,3 +19,12 @@ AWS_SECRET_ACCESS_KEY=minioadmin123
 AWS_ENDPOINT_URL=http://localhost:9000
 AWS_REGION=us-east-1
 AWS_S3_FORCE_PATH_STYLE=true
+
+# PostgreSQL Configuration
+DB_TYPE=postgres
+DB_PORT=5543
+DB_USER=postgres
+DB_HOST=localhost
+DB_NAME=postgres
+DB_PASSWORD=dsi2025@
+DB_PORT=5543
