--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "multer": "^2.0.2",
-    "multer-s3": "^3.0.1"
+    "multer-s3": "^3.0.1",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
@@ -27,6 +28,7 @@
     "@types/multer": "^2.0.0",
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^24.0.15",
+    "@types/pg": "^8.15.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
