adding status and actions changes  3/08/2025 7:12 pm

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "jspdf-autotable": "^5.0.2"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.21.4"
+    "@openapitools/openapi-generator-cli": "^2.21.4",
+    "@types/history": "^5.0.0"
   }
 }
