--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/history": "^5.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.8",
