--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "express-session": "^1.18.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.21.4",
-    "@types/history": "^5.0.0"
+    "@types/express-session": "^1.18.2",
+    "@types/history": "^5.0.0",
+    "@types/node": "^24.2.1"
   }
 }
